--- a/index.html
+++ b/index.html
@@ -77,18 +77,16 @@
     <section>
     <div class="formulario">
         <form action="">
-            <p>(44) 9999-9999</p>
-            <p>contatozulaine85@gmail.com </p>
-            <p>Rua XYZ, Bairro ABC - Umuarama PR</p>
-            <input type="text" placeholder="Nome">
-            <input type="text" placeholder="Telefone">
+            <h3>(41) 9999-9999</h3>
+            <h3>contatozulaine85@gmail.com </h3>
+            <h3>Rua XYZ, Bairro ABC - Curitiba PR</h3>
             <input type="text" placeholder="Mensagem">
             <input type="button" value="Enviar">
    
         </form>
     </div>
     <div class="localizacao">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.806328840062!2d-53.28148830000001!3d-23.754284800000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f2d1e658459f85%3A0x7b81c993c8545f96!2sFaculdade%20ALFA%20Umuarama%20-%20UniALFA!5e0!3m2!1spt-BR!2sbr!4v1744158901420!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14412.7198429429!2d-49.270825949999995!3d-25.43224635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce46c446c6b1b%3A0xd0de5b0dd07147b!2sCentro%2C%20Curitiba%20-%20PR!5e0!3m2!1spt-BR!2sbr!4v1744569269260!5m2!1spt-BR!2sbr"></iframe>
     </div>
 
     <div class="redessociais">
